# matrix_multiplication

./: .gitignore  CMakeLists.txt  README.md  execute.bat
include/: error_check.h  global.h  gpu_timer.h  matrix.h  matrix_cpu.h  matrix_gpu.h  timer.h
src/: cpu_main.cpp  gpu_main.cu  matrix.cpp  matrix_cpu.cpp  matrix_gpu.cu
